--- a/pcdos-disks.htm
+++ b/pcdos-disks.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>PC DOS disk listings</title>
-<meta http-equiv="Content-Type" content="text/html; charset=US-ASCII">
+<meta http-equiv="Content-Type" content="text/html; charset=ANSI">
 </head>
 <body>
 <h2>PC DOS disk listings</h2>
