--- a/pcdos-disks.htm
+++ b/pcdos-disks.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>PC DOS disk listings</title>
-<meta http-equiv="Content-Type" content="text/html; charset=Windows-1252">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
 <h2>PC DOS disk listings</h2>
@@ -25,7 +25,7 @@
 </dl>
 <p>
 <hr>
-<h3 id="PCDOS100">PC DOS 1.0 - one 160KB 5¼" floppy disk</h3>
+<h3 id="PCDOS100">PC DOS 1.0 - one 160KB 5&frac14;" floppy disk</h3>
 <pre>
  Volume in drive A has no label
  Directory of A:\
@@ -74,7 +74,7 @@ COMM     BAS       4,352 08-04-81  12:00a
                          6,144 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS110">PC DOS 1.1 - one 160KB 5¼" floppy disk</h3>
+<h3 id="PCDOS110">PC DOS 1.1 - one 160KB 5&frac14;" floppy disk</h3>
 <pre>
  Volume in drive A has no label
  Directory of A:\
@@ -111,7 +111,7 @@ COMM     BAS       4,352 05-07-82  12:00p
                          7,168 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS200">PC DOS 2.0 - two 180KB 5¼" floppy disks</h3>
+<h3 id="PCDOS200">PC DOS 2.0 - two 180KB 5&frac14;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -168,7 +168,7 @@ COMM     BAS       4,352 03-08-83  12:00p
                         87,040 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS210">PC DOS 2.1 - two 180KB 5¼" floppy disks</h3>
+<h3 id="PCDOS210">PC DOS 2.1 - two 180KB 5&frac14;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -228,7 +228,7 @@ VENDOR-# DA1           0 07-04-83  12:00a
                         69,120 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS300">PC DOS 3.0 - two 360KB 5¼" floppy disks</h3>
+<h3 id="PCDOS300">PC DOS 3.0 - two 360KB 5&frac14;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -298,7 +298,7 @@ COMM     BAS       4,352 08-14-84   8:00a
                        108,544 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS310">PC DOS 3.1 - two 360KB 5¼" floppy disks</h3>
+<h3 id="PCDOS310">PC DOS 3.1 - two 360KB 5&frac14;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -374,7 +374,7 @@ VENDOR-# DO1           0 07-04-83  12:00a
                        108,544 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS320">PC DOS 3.2 - two 360KB 5¼" floppy disks</h3>
+<h3 id="PCDOS320">PC DOS 3.2 - two 360KB 5&frac14;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -453,7 +453,7 @@ VENDOR-# WT1           0 07-04-83  12:00a
                        107,520 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS330">PC DOS 3.3 - one 720KB 3½" floppy disk</h3>
+<h3 id="PCDOS330">PC DOS 3.3 - one 720KB 3&frac12;" floppy disk</h3>
 <pre>
  Volume in drive A has no label
  Directory of A:\
@@ -515,7 +515,7 @@ VENDOR-# DO1           0 07-04-83  12:00a
                        128,512 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS400">PC DOS 4.00 - two 720KB 3½" floppy disks</h3>
+<h3 id="PCDOS400">PC DOS 4.00 - two 720KB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -611,7 +611,7 @@ DOS01L   400           0 06-17-88  12:00p
                         50,688 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS401">PC DOS 4.01 - two 720KB 3½" floppy disks</h3>
+<h3 id="PCDOS401">PC DOS 4.01 - two 720KB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A has no label
@@ -707,7 +707,7 @@ DOS01L   400           0 06-17-88  12:00p
                         51,200 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS500">PC DOS 5.0 - three 720KB 3½" floppy disks</h3>
+<h3 id="PCDOS500">PC DOS 5.0 - three 720KB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A is DISK      1
@@ -845,7 +845,7 @@ EGAX     CP_      14,101 05-09-91  12:00p
                        169,984 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS502">PC DOS 5.02 - three 720KB 3½" floppy disks</h3>
+<h3 id="PCDOS502">PC DOS 5.02 - three 720KB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A is DISK      1
@@ -989,7 +989,7 @@ PRINTFIX CO_          84 09-01-92  12:00p
                        149,504 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS610">PC DOS 6.1 - four 1.44MB 3½" floppy disks</h3>
+<h3 id="PCDOS610">PC DOS 6.1 - four 1.44MB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A is DISK      1
@@ -1342,7 +1342,7 @@ SETUP2   OVL      25,602 06-29-93  12:00p
                         24,064 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS630">PC DOS 6.3 - five 1.44MB 3½" floppy disks</h3>
+<h3 id="PCDOS630">PC DOS 6.3 - five 1.44MB 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A is DISK      1
@@ -1720,7 +1720,7 @@ README   TXT      26,890 12-31-93  12:00a
                        377,856 bytes free
 </pre>
 <hr>
-<h3 id="PCDOS700">PC DOS 7.0 - one 1.44MB 3½" floppy disk, four 1.84MB XDF 3½" floppy disks</h3>
+<h3 id="PCDOS700">PC DOS 7.0 - one 1.44MB 3&frac12;" floppy disk, four 1.84MB XDF 3&frac12;" floppy disks</h3>
 <div><b>Disk 1</b></div>
 <pre>
  Volume in drive A is DISK      1
