--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <li><a href="fatgen.pdf">Microsoft File Allocation Table (FAT) file system documentation</a></li>
 <li><a href="mscdex21.txt">Microsoft CD-ROM Extensions (MSCDEX) documentation</a></li>
 <li><a href="omf.pdf">Relocatable Object Module Format (OMF) documentation</a></li>
-<li><a href="mbr.txt">Master Boot Record (MBR) information and code disassembly</a></li>
+<li><a href="MBR.txt">Master Boot Record (MBR) information and code disassembly</a></li>
 <li><a href="masmhist.txt">Microsoft Macro Assembler (MASM) version history</a></li>
 <li><a href="mschist.txt">Microsoft C compiler version history</a></li>
 </ul>
