--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <li>Official DOS Protected Mode Interface (DPMI) documentation: <a href="dpmispec.txt">version 0.9</a> - <a href="dpmispec1.pdf">version 1.0</a></li>
 <li>Official VESA BIOS Extension (VBE) documentation: <a href="VBE12.txt">version 1.2</a> - <a href="VBE20.txt">version 2.0</a> - <a href="VBE30.pdf">version 3.0</a></li>
 <li><a href="fatgen.pdf">Microsoft File Allocation Table (FAT) file system documentation</a></li>
-<li><a href="mscdex21.txt">Microsoft CD-ROM Extensions (MSCDEX) documentation</a></li>
+<li><a href="MSCDEX21.txt">Microsoft CD-ROM Extensions (MSCDEX) documentation</a></li>
 <li><a href="omf.pdf">Relocatable Object Module Format (OMF) documentation</a></li>
 <li><a href="MBR.txt">Master Boot Record (MBR) information and code disassembly</a></li>
 <li><a href="masmhist.txt">Microsoft Macro Assembler (MASM) version history</a></li>
