--- a/books.htm
+++ b/books.htm
@@ -47,7 +47,7 @@
 </ul>
 <p>Current x86 documentation links:</p>
 <ul>
-<li>Intel - <a href="https://software.intel.com/content/www/us/en/develop/articles/intel-sdm.html">https://software.intel.com/content/www/us/en/develop/articles/intel-sdm.html</a></li>
+<li>Intel - <a href="https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html">https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html</a></li>
 <li>AMD - <a href="https://developer.amd.com/resources/developer-guides-manuals/">https://developer.amd.com/resources/developer-guides-manuals/</a></li>
 </ul>
 <p>Also while not official, <a href="http://www.cs.cmu.edu/~ralf/files.html">Ralf Brown's Interrupt List</a> was a comprehensive listing of PC interrupt calls, I/O ports, memory locations, far-call interfaces, both documented and undocumented.</p>
