--- a/dosver.htm
+++ b/dosver.htm
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<table border="2" cellpadding="2" cellspacing="1" style="border-collapse:collapse;border:solid">
+<table border="2" cellpadding="2" cellspacing="1" style="border-collapse:collapse;border-color:rgb(136,136,136)">
 <thead>
-<tr style="border-bottom:solid">
+<tr style="border-bottom:solid;border-top:solid">
 <th>Version</th>
 <th> </th>
-<th style="text-align:center">INT 21h fn 30h returns</th>
+<th style="text-align:center">INT 21h fn 30h<br>returns</th>
 <th style="text-align:center">Comments</th>
 </tr>
 </thead>
