--- a/enhdebug.htm
+++ b/enhdebug.htm
@@ -2,6 +2,7 @@
 <head>
 <title>Enhanced DEBUG for PC DOS and MS-DOS</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <div>
