--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>PC DOS Retro</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="canonical" href="https://pcdosretro.github.io/">
 </head>
 <body>
 <div style="font-family:sans-serif;font-size:smaller">
