--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
 <head>
 <title>PC DOS Retro</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta name="author" content="Vernon Brooks">
+<meta name="description" content="Detailed technical information and history about PC DOS and MS-DOS">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="canonical" href="https://pcdosretro.github.io/">
 </head>
@@ -81,3 +84,4 @@
 </ul>
 </div>
 </body>
+</html>
