--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 <li><a href="pcdos-disks.htm">PC DOS disk listings</a></li>
 <li><a href="dosdispatcher.txt">Evolution of the DOS INT 21h function dispatcher</a></li>
 <li><a href="sysvars.htm">Information about the DOS SYSVARS table</a></li>
+<li><a href="undocumentedfuncs.htm">Information about undocumented DOS functions</a></li>
 <li><a href="removedfuncs.htm">Information about removed DOS INT 21h functions</a></li>
 <li><a href="multitaskingmsdos4.htm">Information about the little known multitasking MS-DOS 4.0</a></li>
 <li><a href="pcdos2000diffs.htm">Analysis of PC DOS 2000 Y2K differences from PC DOS 7</a></li>
