--- a/undocumentedfuncs.htm
+++ b/undocumentedfuncs.htm
@@ -204,6 +204,27 @@
 <td>This was primarily meant for the PC Convertible</td>
 </tr>
 <tr>
+<td>INT 21h func 6520h</td>
+<td>Uppercase character</td>
+<td>4.0+</td>
+<td>Yes, DOS 5.0</td>
+<td></td>
+</tr>
+<tr>
+<td>INT 21h func 6521h</td>
+<td>Uppercase string</td>
+<td>4.0+</td>
+<td>Yes, DOS 5.0</td>
+<td></td>
+</tr>
+<tr>
+<td>INT 21h func 6522h</td>
+<td>Uppercase ASCIIZ string</td>
+<td>4.0+</td>
+<td>Yes, DOS 5.0</td>
+<td></td>
+</tr>
+<tr>
 <td>INT 21h func 6523h</td>
 <td>Yes/no check</td>
 <td>4.0+</td>
