--- a/undocumentedfuncs.htm
+++ b/undocumentedfuncs.htm
@@ -253,6 +253,13 @@
 <td></td>
 </tr>
 <tr>
+<td>INT 21h func 65A3h</td>
+<td>Yes/no check</td>
+<td>4.0+</td>
+<td>No</td>
+<td>Duplicate of function 6523h</td>
+</tr>
+<tr>
 <td>INT 21h func 69h</td>
 <td>Get or set media info</td>
 <td>4.0+</td>
