--- a/undocumentedfuncs.htm
+++ b/undocumentedfuncs.htm
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body>
-<p>DOS has a number of undocumented functions and features. Many of the functions dealt with internal tables or networking but some were seemingly not documented simply to give Microsoft an unfair advantage by doing things which other developers were unaware of. Microsoft did document some of these functions in the MS-DOS 5.0 Programmer's Reference. Of course, since DOS was relatively small, all of the undocumented were eventually figured out.</p>
+<p>DOS has a number of undocumented functions and features. Many of the functions dealt with internal tables or networking but some were seemingly not documented simply to give Microsoft an unfair advantage by doing things which other developers were unaware of. Microsoft did document some of these functions in the MS-DOS 5.0 Programmer's Reference. Of course, since DOS was relatively small, all of the undocumented functions were eventually figured out.</p>
 <table style="border-collapse:collapse;border-color:rgb(136,136,136);border-width:1px" cellspacing="1" cellpadding="2" border="1">
 <tbody>
 <tr>
