--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <link rel="canonical" href="https://pcdosretro.github.io/">
 </head>
 <body>
-<div style="font-family:sans-serif;font-size:smaller">
+<div style="font-family:sans-serif;font-size:medium">
 <p><b style="font-size:x-large">PC DOS Retro</b><i style="color:grey;font-size:small"> by Vernon Brooks</i><span style="float:right"><img src="pcdos.png" alt="PC DOS"><img src="msdos.png" alt="MS-DOS"></span></p>
-<p><b style="font-size:medium">Information and history about PC DOS and MS-DOS</b></p>
+<p><b>Information and history about PC DOS and MS-DOS</b></p>
 <ul>
 <li><a href="commands.htm">List of DOS commands</a></li>
 <li><a href="config.htm">List of DOS CONFIG.SYS commands</a></li>
@@ -26,7 +26,7 @@
 <li><a href="doshist.txt">History of DOS</a></li>
 </ul>
 <hr>
-<p><b style="font-size:medium">DOS utilities and stuff</b></p>
+<p><b>DOS utilities and stuff</b></p>
 <ul>
 <li><a href="dosmods.htm">Detailed list of changes I made as the lead developer of PC DOS 7</a></li>
 <li><a href="pcdos7patch.txt">Patches for PC DOS 7 system files to reduce conventional memory usage</a></li>
@@ -44,7 +44,7 @@
 <li><a href="bootldr.htm">BOOTLDR - simple MBR boot loader which allows booting from any valid partition</a></li>
 </ul>
 <hr>
-<p><b style="font-size:medium">IBM PC BIOS source code reconstruction</b></p>
+<p><b>IBM PC BIOS source code reconstruction</b></p>
 <ul>
 <li><a href="IBMPCBIOS.htm">Information</a></li>
 <li><a href="IBMBIOS.txt">IBM PC BIOS version history</a></li>
@@ -58,7 +58,7 @@
 <li><a href="XT286.ZIP">IBM PC XT 286 BIOS (dated 04/21/86)</a></li>
 </ul>
 <hr>
-<p><b style="font-size:medium">Related specs and information</b></p>
+<p><b>Related specs and information</b></p>
 <ul>
 <li><a href="biosfunc.txt">BIOS functions</a></li>
 <li><a href="biosdata.txt">BIOS data area</a></li>
@@ -79,7 +79,7 @@
 <li><a href="mschist.txt">Microsoft C compiler version history</a></li>
 </ul>
 <hr>
-<p><b style="font-size:medium">Other stuff</b></p>
+<p><b>Other stuff</b></p>
 <ul>
 <li><a href="books.htm">Official reference books of the DOS era</a></li>
 </ul>
