--- a/dosmods.htm
+++ b/dosmods.htm
@@ -1,5 +1,4 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
-<html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>PC DOS 7.0 modifications by Vernon C. Brooks</title>
@@ -8,7 +7,7 @@
 <div style="font-family:sans-serif">
 <h4>This is a detailed list of the changes I made in PC DOS 7.0</h4>
 </div>
-<div style="font-family:sans-serif;font-size:small">
+<div style="font-family:sans-serif;font-size:medium">
 <b>IBMBIO.COM</b>
 <ul>
 <li>Decreased the number of resident floppy drive tables from 4 to 2 saving 200 bytes. Additional floppy drive tables will be added dynamically if 3 or 4 floppy drives are present.
@@ -198,4 +197,3 @@
 </ul>
 </div>
 </body>
-</html>
