--- a/books.htm
+++ b/books.htm
@@ -24,7 +24,9 @@
 </ul>
 <p>DOS books:</p>
 <ul>
+<li>The Peter Norton Programmer's Guide to the IBM PC <i>by Peter Norton</i> (first edition - 1985)</li>
 <li>Advanced MS-DOS Programming <i>by Ray Duncan</i> (1986)</li>
+<li>The New Peter Norton Programmer's Guide to the IBM PC &amp; PS/2 <i>by Peter Norton &amp; Richard Wilton</i> (second edition - 1988)</li>
 <li>The MS-DOS Encyclopedia (1988) - covers up to DOS 3.3</li>
 <li>The Programmer's PC Sourcebook <i>by Thom Hogan</i> (first edition - 1988) - covers up to DOS 3.3</li>
 <li>The Programmer's PC Sourcebook <i>by Thom Hogan</i> (second edition - 1991) - covers up to DOS 5.0</li>
@@ -50,5 +52,6 @@
 <li>Intel - <a href="https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html">https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html</a></li>
 <li>AMD - <a href="https://developer.amd.com/resources/developer-guides-manuals/">https://developer.amd.com/resources/developer-guides-manuals/</a></li>
 </ul>
-<p>Also while not official, <a href="http://www.cs.cmu.edu/~ralf/files.html">Ralf Brown's Interrupt List</a> was a comprehensive listing of PC interrupt calls, I/O ports, memory locations, far-call interfaces, both documented and undocumented.</p>
+<p>Also, Microsoft published several versions of the <b>Microsoft Programmer's Library</b> CD-ROM which had machine-readable versions of a number of books. The last known release (1.4) was from July 1991 <a href="MSPL.txt">(List of contents)</a></p>
+<p>Finally, while not official, <a href="http://www.cs.cmu.edu/~ralf/files.html">Ralf Brown's Interrupt List</a> was a comprehensive listing of PC interrupt calls, I/O ports, memory locations, far-call interfaces, both documented and undocumented.</p>
 </body>
