--- a/books.htm
+++ b/books.htm
@@ -35,7 +35,7 @@
 </ul>
 <p>Other books:</p>
 <ul>
-<li>The C Programming Language, Second Edition <i>by Brian Kernighan and Dennis Ritchie</i> (1988)</li>
+<li>The C Programming Language, Second Edition <i>by Brian Kernighan &amp; Dennis Ritchie</i> (1988)</li>
 </ul>
 <p>Intel 80x86 reference manuals:</p>
 <ul>
@@ -52,6 +52,6 @@
 <li>Intel - <a href="https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html">https://www.intel.com/content/www/us/en/developer/articles/technical/intel-sdm.html</a></li>
 <li>AMD - <a href="https://developer.amd.com/resources/developer-guides-manuals/">https://developer.amd.com/resources/developer-guides-manuals/</a></li>
 </ul>
-<p>Also, Microsoft published several versions of the <b>Microsoft Programmer's Library</b> CD-ROM which had machine-readable versions of a number of books. The last known release (1.4) was from July 1991 <a href="MSPL.txt">(List of contents)</a></p>
+<p>Also, Microsoft published several versions of the <b>Microsoft Programmer's Library</b> CD-ROM which included machine-readable versions of a number of books. The last known release (1.4) was from July 1991 <a href="MSPL.txt">(List of contents)</a></p>
 <p>Finally, while not official, <a href="http://www.cs.cmu.edu/~ralf/files.html">Ralf Brown's Interrupt List</a> was a comprehensive listing of PC interrupt calls, I/O ports, memory locations, far-call interfaces, both documented and undocumented.</p>
 </body>
