--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 <ul>
 <li><a href="books.htm">Official reference books of the DOS era</a></li>
 </ul>
+<hr>
+<p style="font-size:small">PC DOS Retro &copy; 2013-2022 Vernon Brooks<br>All rights reserved</p>
 </div>
 </body>
 </html>
