--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <li><a href="books.htm">Official reference books of the DOS era</a></li>
 </ul>
 <hr>
-<p style="font-size:small">PC DOS Retro &copy; 2013-2022 Vernon Brooks<br>All rights reserved</p>
+<p style="font-size:small">PC DOS Retro &copy; 2013-2022 Vernon Brooks<br>All rights reserved<br><a href="TermsofUse.htm">Terms of Use</a></p>
 </div>
 </body>
 </html>
