--- a/TermsofUse.htm
+++ b/TermsofUse.htm
@@ -9,7 +9,7 @@
 <p><b style="font-size:x-large">Terms of Use</b></p>
 <p>PC DOS Retro is a historical reference for DOS and related software and specifications.<br>
 The information and software on this website is provided for non-commercial use only.<br>
-Mirror sites, duplicate pages or blatant copies of this website are expressly forbidden.</p>
+Mirror sites, forks, duplicate pages, blatant copies or any redistributions of this website are expressly forbidden.</p>
 <p style="font-size:small">PC DOS Retro &copy; 2013-2022 Vernon Brooks<br>All rights reserved</p>
 </body>
 </html>
